--- a/ML_Regression_Capstone_Project.ipynb
+++ b/ML_Regression_Capstone_Project.ipynb
@@ -6,28 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
-        "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -191,7 +169,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    - \n",
+        "# **Project Name**    - **Retail Sales Prediction**\n",
         "\n"
       ],
       "metadata": {
@@ -201,12 +179,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Project Type**    - Regression\n",
+        "##### **Contribution**    - Individual\n",
+        "**Akeel Rashid**\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -260,7 +235,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "**Write Problem Statement Here.**\n",
+        "Rossmann operates over 3,000 drug stores in 7 European Countries.Currently,Rossmann store managers are tasked with predicting their daily sales for upto six weeks in advance.Store sales are influenced by many factors,including promotions,competition,school and state holidays,seasonality,and loclity.With thousands of individual managers predicting sales based on their unique circumstance the accuracy of result can be quite varied.You are provided with historical sales data for 1,115 Rossmann stores.The task is to forecast the 'Sales' column for the test set.Note that some stores in the dataset were temporarily closed for reburisment"
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
@@ -380,7 +356,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "from numpy import math\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -400,10 +384,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "#Mouting Google drive with colab notebook\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "4CkvbW_SlZ_R"
+        "id": "30PuhL7ju8Sk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load Dataset\n",
+        "ross_store=pd.read_csv('/content/drive/MyDrive/Data Science/Machine Learning/Regression Capstone Project/Rossmann Stores Data.csv')"
+      ],
+      "metadata": {
+        "id": "I0IEnMEBvFeN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "store=pd.read_csv('/content/drive/MyDrive/Data Science/Machine Learning/Regression Capstone Project/store.csv')"
+      ],
+      "metadata": {
+        "id": "W-ap76xlwRYM"
       },
       "execution_count": null,
       "outputs": []
@@ -420,10 +429,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "ross_store.head()"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.tail()"
+      ],
+      "metadata": {
+        "id": "116v6bkg5Dj5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data=store.merge(ross_store,on='Store',how='left')"
+      ],
+      "metadata": {
+        "id": "ZaWZSAfI5hRx"
       },
       "execution_count": null,
       "outputs": []
@@ -440,7 +472,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "print(f'Shape of dataset is :{data.shape}')\n",
+        "print(f'Our dataset contains {data.index.value_counts().sum()} Columns')\n",
+        "print(f'Our dataset contains {data.columns.value_counts().sum()} Rows')\n"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -460,7 +495,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "data.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -480,13 +516,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "data.duplicated().sum()"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Our dataset doesnot contain any duplicate value"
+      ],
+      "metadata": {
+        "id": "mYxU4Cx3_eYt"
+      }
     },
     {
       "cell_type": "markdown",
@@ -500,7 +546,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "data.isnull().sum().sort_values(ascending=False)"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -511,7 +558,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "plt.figure(figsize=(7,5))\n",
+        "sns.heatmap(data.isnull())\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -549,7 +599,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "data.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -560,7 +611,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "pd.set_option('display.float_format', lambda x: '%.0f' % x)\n",
+        "data.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -598,7 +651,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "unique_vals = data.apply(lambda col: col.unique())\n",
+        "print(unique_vals)"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
@@ -627,10 +682,86 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "# Write your code to make your dataset analysis ready.\n",
+        "data['Date']=pd.to_datetime(data['Date'])\n",
+        "data['year']=data['Date'].dt.year\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['Month']=data['Date'].dt.month\n",
+        "data['week_num']=data['Date'].dt.week"
+      ],
+      "metadata": {
+        "id": "6ZilpvBdODm7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['is_state_holiday'] = data['StateHoliday'].apply(lambda x: 1 if x in ['a', 'b', 'c'] else 0)"
+      ],
+      "metadata": {
+        "id": "u7TbBpOLZdV5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['stateholiday_type']=data['StateHoliday'].apply(lambda x:'no holiday' if x in [0,'0'] else x)"
+      ],
+      "metadata": {
+        "id": "pdqyYug_eSZE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['stateholiday_type'].value_counts()"
+      ],
+      "metadata": {
+        "id": "n-fm5TqiaKCn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "puXAKd1dPr-j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RLfyUiq7TUBC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-i6V8cCbYzgO"
       },
       "execution_count": null,
       "outputs": []
@@ -661,6 +792,100 @@
       "metadata": {
         "id": "GF8Ens_Soomf"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install sweetviz\n"
+      ],
+      "metadata": {
+        "id": "3Mmn5aBGQAbV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=data[data.columns[~data.columns.isin(['StateHoliday'])]]"
+      ],
+      "metadata": {
+        "id": "aFw_QMBFgmBX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.shape"
+      ],
+      "metadata": {
+        "id": "J0GCwp7rizDd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "id": "vTs7DDdLiwO5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sweetviz as sv\n",
+        "analyze_report=sv.analyze(df)\n",
+        "analyze_report.show_html('analyze.html')\n",
+        "import IPython\n",
+        "IPython.display.HTML('analyze.html')"
+      ],
+      "metadata": {
+        "id": "RA6UhCLkQPl6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pandas_profiling"
+      ],
+      "metadata": {
+        "id": "IlmVAbys1ERa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas_profiling as pp\n",
+        "report=pp.ProfileReport(df)\n",
+        "report.to_file('report.html')\n",
+        "import IPython\n",
+        "IPython.display.HTML('ProfileReport.html')\n"
+      ],
+      "metadata": {
+        "id": "0d0nOL9Tz3W_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CAP6Q9nWQO9c"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
