--- a/ML_Regression_Capstone_Project.ipynb
+++ b/ML_Regression_Capstone_Project.ipynb
@@ -441,10 +441,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data.tail()"
+        "store.head()"
       ],
       "metadata": {
-        "id": "116v6bkg5Dj5"
+        "id": "ElvVJKKtekfw"
       },
       "execution_count": null,
       "outputs": []
@@ -558,6 +558,44 @@
     {
       "cell_type": "code",
       "source": [
+        "#defining correlation of Sales Column with remaining\n",
+        "corr_matrix = data.corrwith(data['Sales'])\n",
+        "print(corr_matrix)"
+      ],
+      "metadata": {
+        "id": "5WYu8fiAf--5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corr=data.corr()\n",
+        "plt.figure(figsize=(12,7))\n",
+        "sns.heatmap(corr,cmap=\"YlGnBu\",annot=True)"
+      ],
+      "metadata": {
+        "id": "JqUcNvR1e8J8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#creating a copy of original dataset\n",
+        "df=data.copy()"
+      ],
+      "metadata": {
+        "id": "-ocB8O3shZLT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Visualizing the missing values\n",
         "plt.figure(figsize=(7,5))\n",
         "sns.heatmap(data.isnull())\n",
@@ -565,6 +603,54 @@
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#droping some column which contains too much miising values\n",
+        "df.drop(columns=['PromoInterval','Promo2SinceWeek','Promo2SinceYear','CompetitionOpenSinceMonth','CompetitionOpenSinceYear'],axis=1,inplace=True)"
+      ],
+      "metadata": {
+        "id": "BxDzWQfth6Uv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filling missing value in 'CompetitionDistance' column\n",
+        "df['CompetitionDistance'].fillna(df['CompetitionDistance'].mean(),inplace=True)"
+      ],
+      "metadata": {
+        "id": "eZAHCda8jAHJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "-a6jl4CNkT9O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(7,5))\n",
+        "sns.heatmap(df.isnull())\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "tyMIq7Yuiw3v"
       },
       "execution_count": null,
       "outputs": []
@@ -613,7 +699,7 @@
       "source": [
         "# Dataset Describe\n",
         "pd.set_option('display.float_format', lambda x: '%.0f' % x)\n",
-        "data.describe()"
+        "df.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -652,7 +738,7 @@
       "cell_type": "code",
       "source": [
         "# Check Unique Values for each variable.\n",
-        "unique_vals = data.apply(lambda col: col.unique())\n",
+        "unique_vals = df.apply(lambda col: col.unique())\n",
         "print(unique_vals)"
       ],
       "metadata": {
@@ -683,8 +769,8 @@
       "cell_type": "code",
       "source": [
         "# Write your code to make your dataset analysis ready.\n",
-        "data['Date']=pd.to_datetime(data['Date'])\n",
-        "data['year']=data['Date'].dt.year\n"
+        "df['Date']=pd.to_datetime(df['Date'])\n",
+        "df['year']=df['Date'].dt.year\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
@@ -695,8 +781,8 @@
     {
       "cell_type": "code",
       "source": [
-        "data['Month']=data['Date'].dt.month\n",
-        "data['week_num']=data['Date'].dt.week"
+        "df['Month']=df['Date'].dt.month\n",
+        "df['week_num']=df['Date'].dt.week"
       ],
       "metadata": {
         "id": "6ZilpvBdODm7"
@@ -707,7 +793,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data['is_state_holiday'] = data['StateHoliday'].apply(lambda x: 1 if x in ['a', 'b', 'c'] else 0)"
+        "df['is_state_holiday'] = data['StateHoliday'].apply(lambda x: 1 if x in ['a', 'b', 'c'] else 0)"
       ],
       "metadata": {
         "id": "u7TbBpOLZdV5"
@@ -718,10 +804,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data['stateholiday_type']=data['StateHoliday'].apply(lambda x:'no holiday' if x in [0,'0'] else x)"
+        "df.head()"
       ],
       "metadata": {
-        "id": "pdqyYug_eSZE"
+        "id": "Ah0rocQg34vc"
       },
       "execution_count": null,
       "outputs": []
@@ -729,39 +815,21 @@
     {
       "cell_type": "code",
       "source": [
-        "data['stateholiday_type'].value_counts()"
+        "df.shape"
       ],
-      "metadata": {
-        "id": "n-fm5TqiaKCn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data.head()"
-      ],
-      "metadata": {
-        "id": "puXAKd1dPr-j"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RLfyUiq7TUBC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
       "metadata": {
         "id": "-i6V8cCbYzgO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.drop(columns='StateHoliday',axis=1,inplace=True)"
+      ],
+      "metadata": {
+        "id": "4BqrPwjB7BuK"
       },
       "execution_count": null,
       "outputs": []
@@ -807,39 +875,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df=data[data.columns[~data.columns.isin(['StateHoliday'])]]"
-      ],
-      "metadata": {
-        "id": "aFw_QMBFgmBX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data.shape"
-      ],
-      "metadata": {
-        "id": "J0GCwp7rizDd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.shape"
-      ],
-      "metadata": {
-        "id": "vTs7DDdLiwO5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import sweetviz as sv\n",
         "analyze_report=sv.analyze(df)\n",
         "analyze_report.show_html('analyze.html')\n",
@@ -866,11 +901,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas_profiling as pp\n",
-        "report=pp.ProfileReport(df)\n",
-        "report.to_file('report.html')\n",
-        "import IPython\n",
-        "IPython.display.HTML('ProfileReport.html')\n"
+        "import pandas_profiling\n",
+        "from IPython.display import HTML\n",
+        "from pandas_profiling import ProfileReport\n",
+        "profile = pandas_profiling.ProfileReport(df)\n",
+        "#profile.to_file(output_file=\"output.html\")\n",
+        "HTML(profile.to_html())"
       ],
       "metadata": {
         "id": "0d0nOL9Tz3W_"
@@ -880,7 +916,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#one hot encoding\n"
+      ],
       "metadata": {
         "id": "CAP6Q9nWQO9c"
       },
