--- a/ML_Regression_Capstone_Project.ipynb
+++ b/ML_Regression_Capstone_Project.ipynb
@@ -450,17 +450,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "data=store.merge(ross_store,on='Store',how='left')"
-      ],
-      "metadata": {
-        "id": "ZaWZSAfI5hRx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Dataset Rows & Columns count"
@@ -472,13 +461,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count\n",
-        "print(f'Shape of dataset is :{data.shape}')\n",
-        "print(f'Our dataset contains {data.index.value_counts().sum()} Columns')\n",
-        "print(f'Our dataset contains {data.columns.value_counts().sum()} Rows')\n"
+        "# ross_store Dataset Rows & Columns count\n",
+        "print(f'Shape of dataset is :{ross_store.shape}')\n",
+        "print(f'Our dataset contains {ross_store.index.value_counts().sum()} Columns')\n",
+        "print(f'Our dataset contains {ross_store.columns.value_counts().sum()} Rows')\n"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#store data set Rows & column count\n",
+        "print(f'Shape of dataset is :{store.shape}')\n",
+        "print(f'Our dataset contains {store.index.value_counts().sum()} Columns')\n",
+        "print(f'Our dataset contains {store.columns.value_counts().sum()} Rows')"
+      ],
+      "metadata": {
+        "id": "fWpV032l2We_"
       },
       "execution_count": null,
       "outputs": []
@@ -495,11 +498,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info\n",
-        "data.info()"
+        "# ross_store Dataset Info\n",
+        "ross_store.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#store dataset info\n",
+        "store.info()"
+      ],
+      "metadata": {
+        "id": "98VYsnUB2nEc"
       },
       "execution_count": null,
       "outputs": []
@@ -516,8 +531,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count\n",
-        "data.duplicated().sum()"
+        "# ross_store Dataset Duplicate Value Count\n",
+        "ross_store.duplicated().sum()"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -528,10 +543,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Our dataset doesnot contain any duplicate value"
+        "Ross_store dataset doesnot contain any duplicate value"
       ],
       "metadata": {
         "id": "mYxU4Cx3_eYt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# store Dataset Duplicate Value Count\n",
+        "store.duplicated().sum()"
+      ],
+      "metadata": {
+        "id": "ac5_85g13Eml"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Store dataset doesn't contain any duplicated values\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WIN0WlKi3jjv"
       }
     },
     {
@@ -547,7 +584,7 @@
       "cell_type": "code",
       "source": [
         "# Missing Values/Null Values Count\n",
-        "data.isnull().sum().sort_values(ascending=False)"
+        "ross_store.isnull().sum().sort_values(ascending=False)"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -556,11 +593,40 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ross_store dataset doesn't contains any null values"
+      ],
+      "metadata": {
+        "id": "yjPXETMOsFMy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#defining correlation of Sales Column with remaining\n",
-        "corr_matrix = data.corrwith(data['Sales'])\n",
-        "print(corr_matrix)"
+        "# Missing Values/Null Values Count\n",
+        "store.isnull().sum().sort_values(ascending=False)"
+      ],
+      "metadata": {
+        "id": "fcRyjfXd6yqT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are too many columns which contain null values"
+      ],
+      "metadata": {
+        "id": "FOXFTqs37KMh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.set_option('display.float_format', lambda x: '%.0f' % x)\n",
+        "ross_store.describe()"
       ],
       "metadata": {
         "id": "5WYu8fiAf--5"
@@ -571,12 +637,10 @@
     {
       "cell_type": "code",
       "source": [
-        "corr=data.corr()\n",
-        "plt.figure(figsize=(12,7))\n",
-        "sns.heatmap(corr,cmap=\"YlGnBu\",annot=True)"
+        "store.describe()"
       ],
       "metadata": {
-        "id": "JqUcNvR1e8J8"
+        "id": "1UT6ddb-7WUq"
       },
       "execution_count": null,
       "outputs": []
@@ -584,11 +648,34 @@
     {
       "cell_type": "code",
       "source": [
-        "#creating a copy of original dataset\n",
-        "df=data.copy()"
+        "ross_store.nunique()"
       ],
       "metadata": {
-        "id": "-ocB8O3shZLT"
+        "id": "lUVj2vtXtIFE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "store.nunique()"
+      ],
+      "metadata": {
+        "id": "Z0EVwnYb6t2u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#state holiday cotains O instead of 0(zero)\n",
+        "#Promo2SinceWeek,Promo2SinceYear,PromoInterval,CompetitionOpenSinceMonth,CompetitionOpenSinceYear contains too many null values\n",
+        "#competition distance column contains black spaces"
+      ],
+      "metadata": {
+        "id": "n6iTR_dbycfo"
       },
       "execution_count": null,
       "outputs": []
@@ -598,7 +685,7 @@
       "source": [
         "# Visualizing the missing values\n",
         "plt.figure(figsize=(7,5))\n",
-        "sns.heatmap(data.isnull())\n",
+        "sns.heatmap(store.isnull())\n",
         "plt.show()"
       ],
       "metadata": {
@@ -610,11 +697,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#droping some column which contains too much miising values\n",
-        "df.drop(columns=['PromoInterval','Promo2SinceWeek','Promo2SinceYear','CompetitionOpenSinceMonth','CompetitionOpenSinceYear'],axis=1,inplace=True)"
+        "store.columns"
       ],
       "metadata": {
-        "id": "BxDzWQfth6Uv"
+        "id": "0K039riwDm_p"
       },
       "execution_count": null,
       "outputs": []
@@ -622,35 +708,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#filling missing value in 'CompetitionDistance' column\n",
-        "df['CompetitionDistance'].fillna(df['CompetitionDistance'].mean(),inplace=True)"
+        "store.shape"
       ],
       "metadata": {
-        "id": "eZAHCda8jAHJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.isnull().sum()"
-      ],
-      "metadata": {
-        "id": "-a6jl4CNkT9O"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plt.figure(figsize=(7,5))\n",
-        "sns.heatmap(df.isnull())\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "tyMIq7Yuiw3v"
+        "id": "pIHT30CzDuLC"
       },
       "execution_count": null,
       "outputs": []
@@ -667,7 +728,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "* We have to dataset of rosmann company.One dataset is roaaman store which contains **1017209** rows and **9** columns.The dataset doesn't contain any null or duplicated values.It gives us inforamation about the type of store,sales in each store by what date through how many number of customers.Also whether the sale was affected by closure of shop on weekends or or any kind of stateholiday or schoolholiday.It also gives on how sales was affected on applying promo\n",
+        "* The other dataset is store which has **1115** Rows and **10** Column.This dataset contains too many null values in different columns.which needs to be taken care in future analysis.It provides information like type of store and what is assostment type used in store,how far away is competitor from store,since how long is competitor there in the market and how often is promo applied on the store"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -686,7 +748,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset Columns\n",
-        "data.columns"
+        "ross_store.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -738,11 +800,23 @@
       "cell_type": "code",
       "source": [
         "# Check Unique Values for each variable.\n",
-        "unique_vals = df.apply(lambda col: col.unique())\n",
+        "unique_vals =ross_store.apply(lambda col: col.unique())\n",
         "print(unique_vals)"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_vals =store.apply(lambda col: col.unique())\n",
+        "print(unique_vals)"
+      ],
+      "metadata": {
+        "id": "yTzAlYHwOGhn"
       },
       "execution_count": null,
       "outputs": []
@@ -764,6 +838,64 @@
       "metadata": {
         "id": "bKJF3rekwFvQ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dropping coluns from store dataset which contains too many null values\n",
+        "store.drop(columns=['PromoInterval','Promo2SinceYear','Promo2SinceWeek','CompetitionOpenSinceYear','CompetitionOpenSinceMonth'],axis=1,inplace=True)"
+      ],
+      "metadata": {
+        "id": "xCaJm73KON8v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filling null values in competitiondistance column with median\n",
+        "store['CompetitionDistance'].fillna(store['CompetitionDistance'].median(),inplace=True)"
+      ],
+      "metadata": {
+        "id": "eUUGqdXtPR1C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#merging both tables\n",
+        "data=ross_store.merge(store,on='Store',how='left')"
+      ],
+      "metadata": {
+        "id": "o-aQTiEhQWsY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "5DHtr6fzR6tQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.shape"
+      ],
+      "metadata": {
+        "id": "4dWKrWMBSMvc"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -917,7 +1049,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#one hot encoding\n"
+        "#pairplot\n",
+        "sns.pairplot(df,hue='Sales',kind='kde')\n",
+        "plt.plot"
       ],
       "metadata": {
         "id": "CAP6Q9nWQO9c"
