--- a/ML_Regression_Capstone_Project.ipynb
+++ b/ML_Regression_Capstone_Project.ipynb
@@ -6,7 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "448CDAPjqfQr",
@@ -900,9 +899,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready.\n",
-        "df['Date']=pd.to_datetime(df['Date'])\n",
-        "df['year']=df['Date'].dt.year\n"
+        "# creating year,month,week_num column\n",
+        "data['Date']=pd.to_datetime(data['Date'])\n",
+        "data['year']=data['Date'].dt.year\n",
+        "data['Month']=data['Date'].dt.month\n",
+        "data['week_num']=data['Date'].dt.week\n"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
@@ -913,11 +914,113 @@
     {
       "cell_type": "code",
       "source": [
-        "df['Month']=df['Date'].dt.month\n",
-        "df['week_num']=df['Date'].dt.week"
+        "#dropping date column from data\n",
+        "data.drop(columns='Date',axis=1,inplace=True)"
       ],
       "metadata": {
-        "id": "6ZilpvBdODm7"
+        "id": "X2nt1PduTZ_E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "Cxh8vZIXTLib"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(10,7))\n",
+        "data.boxplot()\n",
+        "plt.xticks(rotation='vertical')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "nEAYw9SrU7Ao"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data['CompetitionDistance'].describe()"
+      ],
+      "metadata": {
+        "id": "xZ091szoUwXy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#CompetitionDistance contains outlier which needs to be treated\n",
+        "data['CompetitionDistance'].quantile(0.99)"
+      ],
+      "metadata": {
+        "id": "Amhiqt-aXv9R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "i calculated 99 percentile value of competition distance which gave me around 36k value but the maximum value is too much so i will drop all the value above 99%"
+      ],
+      "metadata": {
+        "id": "K23jYn2mYUP1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#let's first create copy of our dataset\n",
+        "df=data.copy()"
+      ],
+      "metadata": {
+        "id": "uqfOot2gY5If"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "id": "wagU-t-hZcpI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=df[df['CompetitionDistance']<37000].reset_index()"
+      ],
+      "metadata": {
+        "id": "ynT6-L0KZM8B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
+      ],
+      "metadata": {
+        "id": "ZqET3h5xaj5D"
       },
       "execution_count": null,
       "outputs": []
@@ -936,7 +1039,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.head()"
+        "df.shape"
       ],
       "metadata": {
         "id": "Ah0rocQg34vc"
@@ -1055,6 +1158,17 @@
       ],
       "metadata": {
         "id": "CAP6Q9nWQO9c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "tFM5p3MTbFHB"
       },
       "execution_count": null,
       "outputs": []
